[package]
name = "delete-unused-repo"
description = "Delete unused GitHub repoistories easily."
version = "0.1.0"
edition = "2021"

[profile.release]
incremental = true
opt-level = 3
strip = "symbols"
lto = true

[dependencies]
octocrab = "0.16"

indicatif = "0.17"
console = "0.15"
dialoguer = "0.10"

log = "0.4"
pretty_env_logger = "0.4"

clap = { version = "3.2", features = ["derive", "cargo"] }

[dependencies.tokio]
version = "1.20"
default-features = false
features = ["rt-multi-thread", "io-util", "io-std", "macros"]
